# cognition

./: .gitignore  Makefile
cognition_alpha/: .in  Backup of COGNIT~1.CF3  Backup of Cognition.CF3  Cognition.CF3  Cognition.IAD  Cognition.IMB  Cognition.IMD  Cognition.PFI  Cognition.PO  Cognition.PR  Cognition.PRI  Cognition.PS  Cognition.WK3  Cognition.layout  Makefile.am  Makefile.win  Makefile.win32.glb  autogen.sh  cognition.dsp  cognition.dsw  config.h  config.h.in  configure.ac  runlog.txt  template.txt  var_states.txt
cognition_alpha/client/: Makefile.win32  cl_background.c  cl_foreground.c  cl_game.c  cl_global.h  cl_main.c  cl_player.c  cl_state.c  cl_world.c  client.def  client.dsp
cognition_alpha/cognition/: Makefile.am  Makefile.win32  base_bind.c  base_bitstream.c  base_command.c  base_filelog.c  base_memory_debug.c  base_memory_release.c  base_variable.c  cog_global.h  cog_opengl.h  cog_structures.h  cog_sysdeps.h  dr_console.c  dr_draw.c  dr_entity.c  dr_light.c  dr_menu.c  dr_misc.c  dr_skybox.c  dr_text.c  dr_transparent.c  dr_vbo.c  dr_world.c  game_background.c  game_entity.c  game_game.c  game_particlesys.c  game_world.c  lib_filesys.c  lib_parse.c  lib_rng.c  linked_list.c  linked_list.h  media_bitmap.c  media_colormap.c  media_image.c  media_jpeg.c  media_model.c  media_moo.c  (+24 more)
cognition_alpha/include/: ABOUT.TXT
cognition_alpha/menu/: Button.cpp  Button.h  CheckButton.cpp  CheckButton.h  CogMenu.cpp  CogMenu.h  CogMenuBG.cpp  CogMenuBG.h  CogMenuGlobal.h  Makefile.win32  OptionScreenRoot.cpp  OptionScreenRoot.h  Pixmap.cpp  Pixmap.h  RadioButton.cpp  RadioButton.h  RadioButtonGroup.cpp  RadioButtonGroup.h  RootScreen.cpp  RootScreen.h  Screen.cpp  Screen.h  Single2DOptionsScreen.cpp  Single2DOptionsScreen.h  SingleScreen.cpp  SingleScreen.h  SingleScreen2D.cpp  SingleScreen2D.h  SingleScreen3D.cpp  SingleScreen3D.h  Slider.cpp  Slider.h  Spinner.cpp  Spinner.h  TextEdit.cpp  TextEdit.h  TextLabel.cpp  TextLabel.h  Widget.cpp  Widget.h  (+4 more)
cognition_alpha/old_src/: PictureButton.cpp  PictureButton.h  dr_foreground.c  game_foreground.c  menu_multi.c  menu_root.c  sal_startlog_win.c  sv_widget_button.c  sv_widget_pixmap.c  sv_widget_textedit.c  sv_window.c
cognition_alpha/server/: Makefile.win32  ser_entity.c  ser_global.h  ser_main.c  ser_player.c  ser_state.c  ser_world.c  server.def  server.dsp
cognition_alpha/shared/: Makefile.win32  shared_keycodes.h  shared_library.c  shared_library.h  shared_mathlib.c  shared_mathlib.h  shared_misc.h  shared_queue.c  shared_queue.h  shared_structures.h
gnu/: AUTHORS  Makefile.am  autogen.sh  configure.ac
gnu/src/: Makefile.am
gnu/src/client/: Makefile.am  cl_game.c  cl_global.h  cl_main.c  cl_player.c  cl_world.c
gnu/src/cognition/: Makefile.am  base_bitstream.c  base_memory_debug.c  base_memory_release.c  base_variable.c  cog_opengl.h  cog_structures.h  dr_console.c  dr_light.c  dr_menu.c  dr_misc.c  dr_text.c  game_background.c  game_engine.c  lib_parse.c  media_model.c  media_moo.c  media_mp3.c  media_targa.c  sal_directory_linux.c  sal_display_win.c  sal_input_win_win32.h  sal_module_linux.c  sal_module_win.c  sal_opengl_linux.c  sal_sockets.h  sal_sound_ds.c  sal_sound_ds.h  sal_sound_openal.h  sal_system_linux.c  sal_timesys_sdl.c  sal_timesys_win.c  sv_collision.c  sv_console.c  sv_console.h  sv_input.c  sv_network.c  sv_sound.c
gnu/src/menu/: Button.h  CheckButton.cpp  CogMenuGlobal.h  Makefile.am  OptionScreenRoot.cpp  OptionScreenRoot.h  RadioButton.cpp  RadioButtonGroup.cpp  RootScreen.cpp  RootScreen.h  Single2DOptionsScreen.h  SingleScreen.cpp  SingleScreen2D.cpp  SingleScreen3D.cpp  Slider.cpp  Spinner.cpp  Spinner.h  TextEdit.cpp  Widget.h
gnu/src/server/: Makefile.am  ser_entity.c
gnu/src/shared/: Makefile.am  linked_list.c  linked_list.h  shared_keycodes.h  shared_mathlib.h  shared_misc.h  shared_queue.h
si/: Backup of Cognition.CF3  Cognition.CF3  Cognition.IAB  Cognition.PFI  Cognition.PO  Cognition.PR  Cognition.PRI  Cognition.PS  Cognition.WK3  Makefile.win32
src/client/: Makefile.win32  cl_foreground.c  cl_state.c
src/cognition/: Makefile.win32  base_bind.c  base_command.c  base_filelog.c  base_memory_debug.c  base_memory_release.c  cog_global.h  cog_sysdeps.h  dr_camera.c  dr_draw.c  dr_entity.c  dr_loading.c  dr_skybox.c  dr_transparent.c  dr_vbo.c  dr_world.c  game_entity.c  game_game.c  game_particlesys.c  game_world.c  lib_filesys.c  lib_rng.c  media_bitmap.c  media_colormap.c  media_image.c  media_jpeg.c  media_shader.c  media_wave.c  sal_directory_win32.c  sal_display_sdl.c  sal_display_win.c  sal_input_sdl.c  sal_input_sdl.h  sal_input_win_di.c  sal_input_win_di.h  sal_input_win_win32.c  sal_module_win.c  sal_network_win.c  sal_opengl_win.c  sal_sound_ds.c  (+6 more)
src/menu/: Button.cpp  CheckButton.h  CogMenu.cpp  CogMenu.h  Makefile.win32  Pixmap.cpp  Pixmap.h  RadioButton.h  RadioButtonGroup.h  Screen.cpp  Screen.h  Single2DOptionsScreen.cpp  SingleScreen.h  SingleScreen2D.h  SingleScreen3D.h  Slider.h  TextEdit.h  TextLabel.cpp  TextLabel.h  Widget.cpp
src/old_src/: CogMenuBG.cpp  CogMenuBG.h  YesNoDialog.cpp  YesNoDialog.h  dr_loading.c  dr_window.c  menu_background.c  menu_global.h  menu_main.c  menu_single.c  menu_tree.c  shared_heap.c  shared_heap.h  sv_widget_textlabel.c  sv_window.h
src/server/: Makefile.win32  ser_global.h  ser_main.c  ser_player.c  ser_state.c  ser_world.c
src/shared/: Makefile.win32  shared_library.c  shared_library.h  shared_mathlib.c  shared_misc.h  shared_queue.c  shared_structures.h
vc6/: cognition.dsw
