bin_PROGRAMS = cognition

cognition_SOURCES = \
sv_music.c \
sv_engine.c \
sv_console.c \
sv_collision.c \
sal_timesys_win.c \
sal_timesys_linux.c \
sal_timesys_bsd.c \
sal_system_win.c \
sal_startlog_win.c \
sal_sound_win_ds.c \
sal_sound_win.c \
sal_opengl_win.c \
sal_network_win.c \
sal_module_win.c \
sal_input_win_win32.c \
sal_input_win_di.c \
sal_input_win.c \
sal_display_win.c \
media_wave.c \
media_targa.c \
media_shader.c \
media_mp3.c \
media_moo.c \
media_model.c \
media_jpeg.c \
media_image.c \
media_colormap.c \
media_bitmap.c \
linked_list.c \
lib_rng.c \
lib_parse.c \
lib_filesys.c \
game_world.c \
game_particlesys.c \
game_game.c \
game_foreground.c \
game_entity.c \
dr_world.c \
dr_misc.c \
dr_loading.c \
dr_light.c \
dr_foreground.c \
dr_entity.c \
dr_draw.c \
dr_console.c \
dr_camera.c \
base_variable.c \
base_memory_release.c \
base_memory_debug.c \
base_filelog.c \
base_command.c \
base_bitstream.c \
base_bind.c

cognition_LDADD   =  -lm

EXTRA_DIST =

# set the include path found by configure
INCLUDES= $(all_includes)

# the library search path.
cognition_LDFLAGS = $(all_libraries) 
                                                                                
