# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Library General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.

lib_LTLIBRARIES=libcognitionmenu.la
libcognitionmenu_la_SOURCES= \
		Button.cpp \
		Button.h \
		CheckButton.cpp \
		CheckButton.h \
		CogMenu.cpp \
		CogMenu.h \
		CogMenuGlobal.h \
		OptionScreenRoot.cpp \
		OptionScreenRoot.h \
		Pixmap.cpp \
		Pixmap.h \
		RadioButton.cpp \
		RadioButton.h \
		RadioButtonGroup.cpp \
		RadioButtonGroup.h \
		RootScreen.cpp \
		RootScreen.h \
		Screen.cpp \
		Screen.h \
		Single2DOptionsScreen.cpp \
		Single2DOptionsScreen.h \
		SingleScreen.cpp \
		SingleScreen.h \
		SingleScreen2D.cpp \
		SingleScreen2D.h \
		SingleScreen3D.cpp \
		SingleScreen3D.h \
		Slider.cpp \
		Slider.h \
		Spinner.cpp \
		Spinner.h \
		TextEdit.cpp \
		TextEdit.h \
		TextLabel.cpp \
		TextLabel.h \
		Widget.cpp \
		Widget.h 
libcognitionmenu_la_CXXFLAGS=-g -Wall
