# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Library General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.

lib_LTLIBRARIES=libcognitionshared.la
libcognitionshared_la_SOURCES= \
		shared_library.c \
		shared_library.h \
		shared_mathlib.c \
		shared_mathlib.h \
		shared_queue.c \
		shared_queue.h \
		linked_list.c \
		linked_list.h 
libcognitionshared_la_CFLAGS=-g -Wall
